--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "foundation-sites": "~6.2.0",
     "motion-ui": "~1.2.2",
-    "masonry": "^4.1.0"
+    "masonry": "^4.1.0",
+    "owl.carousel": "^2.1.6"
   },
   "ignore": [
     "**/.*",
